# metahub-app-service

./: .env.example  .gitignore  AGENT_UNIFICATION_COMPLETE.md  AGENT_UNIFICATION_FRONTEND_GUIDE.md  AGENT_UNIFICATION_IMPLEMENTATION.md  API_KEY_ARCHITECTURE.md  API_KEY_CHECKLIST.md  API_KEY_FEATURE.md  API_KEY_GUIDE.md  API_KEY_QUICKSTART.md  API_KEY_SUMMARY.md  API_KEY_USAGE_EXAMPLE.md  API_MIGRATION_GUIDE.md  API_STANDARD_HTTP_MIGRATION.md  CLAUDE.md  DEEPAGENTS_ADVANCED_FEATURES.md  DEEPAGENTS_COMPLETE_IMPLEMENTATION.md  DEEPAGENTS_DATABASE_MIGRATION.md  DEEPAGENTS_MIGRATION_COMPLETE.md  Dockerfile  EMBEDDING_ASYNC_OPTIMIZATION.md  EMBEDDING_ASYNC_QUICKSTART.md  EMBEDDING_ASYNC_SUMMARY.md  EVENT_USER_ISOLATION.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IM_GATEWAY_ARCHITECTURE.md  IM_GATEWAY_CHECKLIST.md  IM_GATEWAY_IMPLEMENTATION.md  IM_GATEWAY_QUICKSTART.md  IM_GATEWAY_README.md  IM_SEND_FEATURE.md  IM_SEND_QUICKSTART.md  MCP_API_FIX.md  MCP_FINAL_SUMMARY.md  MCP_FRONTEND_INTEGRATION.md  MCP_IMPLEMENTATION_STATUS.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_FINAL_SUMMARY.md  (+79 more)
alembic/: env.py
alembic/versions/: 0d8e7f9c8696_add_api_key_to_user_table.py  (+39 more)
app/: api.py  config.py  deps.py
docs/: ACTIVITY_API.md  ACTIVITY_SORT_ORDER_INTEGRATION.md  SESSION_TOPIC_DESIGN.md  TOOLS_DISCOVERY_IMPLEMENTATION.md
examples/: im_bridge_example.py  openrouter_example.py  webhook_integration_example.py
frontend/: .env.example  .gitignore  BUILD_NOTES.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_FEATURE_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_START.md  README_CN.md  SESSION_IMPLEMENTATION_SUMMARY.md  SESSION_LIST_GUIDE.md  SESSION_QUICKSTART.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts  快速参考.txt  测试清单.md  项目说明.md
scripts/: backfill_search_index.py  migrate_message_str.py  process_pending_embeddings.py  retry_failed_embeddings.py  verify_agent_unification.py
tests/: conftest.py  test_activity_api.py  test_agent_unification.py  test_agent_unification_api.py  test_chat_metrics.py  test_sandbox_browser_proxy.py  test_sandbox_terminal.py  test_sandbox_tools.py  test_session_api.py  test_tools_api.py
(+430 files in other folders)
