[project]
name = "metahub-app-service"
version = "0.1.0"
description = "An app service for MetaHub project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.120.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "bcrypt>=4.0.0",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uuid7>=0.1.0",
    "uvicorn>=0.38.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
]
