[project]
name = "metahub-app-service"
version = "0.1.0"
description = "An app service for MetaHub project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.120.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "bcrypt>=4.0.0",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uuid7>=0.1.0",
    "uvicorn>=0.38.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.2.0",
    "sse-starlette>=2.0.0",
    "pytz>=2024.1",
    "deepagents>=0.3.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "websockets>=14.0",
    "httpx>=0.28.1",
    "openai>=1.30.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.22",
    "langchain-mcp-adapters>=0.1.0",
    "apscheduler>=3.10,<4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
